Turns out that using triggers for the perception component does not scale well. In order to optimize I did the following:
1. Simplified the Boid prefab - removed the perception colliders. The boid is now a kinematic body and I'm manipulating its transform directly.
2. The perception component does not use triggers any more. It uses vector math to determine the perceived objects.
3. Deleted the PerceptionCollider2D prefab since it's not needed anymore.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,10 @@
 - Perhaps the approach with colliders for perception does not scale well at all?
 - Think about moving the composite move calculation out of the Boid class and to the Swarm? Perhaps it will be more optimized? Can't tell right now, my brain is melted.
 - Consider how this can be rewritten with the Unity DOTS.
+
+NOTES: It appears the physics approach is the issue. Collision detection seems to be heavy in scale.
+EDIT: Yes, the physics were causing the performance issues.
+
+3. Maybe use Cinemachine for the camera?
+
+4. Draw debug display in the PerceptionComponent.
