Refactoring the PerceptionComponent: 1. Returned the optimization code from yesterday. I got confused that it does not grant me performance gains. I was wrong. 2. Added a check for the self collider. Opted out from using an if statement in the foreach loop because my benchmarks showed that it's a lot slower.

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,3 +12,5 @@ EDIT: Yes, the physics were causing the performance issues.
 3. Maybe use Cinemachine for the camera?
 
 4. Draw debug display in the PerceptionComponent.
+
+5. Create another perception component for benchmarking. One that uses vector math and one that uses the physics system.
